[package]
name = "accounts_manager"
version = "0.1.0"
edition = "2021"
authors = ["Saddam Uwejan (Sam) <saddamuwejan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Accounts Manager"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
rust_decimal = { version = "1.25.0", features = ["serde-with-str"] }
serde = { version = "1.0.224", features = ["derive"] }
thiserror = "2.0.12"
